test/core/errors/alignment_error/zs/negative_integer_alignment_error.zs
package negative_integer_alignment_error;

struct NegativeIntegerAlignmentError
{
align(-1):
    int32 field;
};
